CMAKE_MINIMUM_REQUIRED(VERSION 2.5.0 FATAL_ERROR)


#SET(CMAKE_VERBOSE_MAKEFILE "ON" CACHE BOOLEAN "Make it more verbose!" FORCE)
if(COMMAND cmake_policy)
  cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)


SET (CMAKE_CONFIGURATION_TYPES "Release;Debug" CACHE STRING "" FORCE)
MARK_AS_ADVANCED(CMAKE_CONFIGURATION_TYPES)


SET(DEBUGGING_ON TRUE CACHE BOOLEAN "Turn on debugging?" FORCE)
MARK_AS_ADVANCED(DEBUGGING_ON)


PROJECT(datadraw)


# CMake include directory
SET(CMAKE_MODULE_PATH           ${PROJECT_SOURCE_DIR}/cmake)
SET(PACKAGE                     ${PROJECT_NAME})
SET(CMAKE_SKIP_BUILD_RPATH      TRUE)
SET(CMAKE_CURRENT_BINARY_DIR    ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH      ${CMAKE_CURRENT_BINARY_DIR})
SET(REAL_EXECUTABLE_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_CFG_INTDIR})


# On Visual Studio 2003+ MS deprecated C. This removes all 1.276E1265 security
# warnings
IF(MSVC AND NOT MSVC60)
  ADD_DEFINITIONS(
    -D_CRT_SECURE_NO_WARNINGS
    -D_CRT_NONSTDC_NO_WARNINGS

    -D_CRT_FAR_MAPPINGS_NO_DEPRECATE
    -D_CRT_IS_WCTYPE_NO_DEPRECATE
    -D_CRT_MANAGED_FP_NO_DEPRECATE
    -D_CRT_NONSTDC_NO_DEPRECATE
    -D_CRT_SECURE_NO_DEPRECATE
    -D_CRT_SECURE_NO_DEPRECATE_GLOBALS
    -D_CRT_SETERRORMODE_BEEP_SLEEP_NO_DEPRECATE
    -D_CRT_TIME_FUNCTIONS_NO_DEPRECATE
    -D_CRT_VCCLRIT_NO_DEPRECATE
    -D_SCL_SECURE_NO_DEPRECATE
  )
ENDIF(MSVC AND NOT MSVC60)


# Version data that need modification for each release.
INCLUDE(version)
# Prebuild datadraw!
SET(MAINBUILD TRUE)
INCLUDE(prebuilt)

IF(DEBUGGING_ON AND GCC)
  SET(PARAMS "-Wall -W -Wno-unused-parameter -Wno-unused-function")
  SET(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} ${PARAMS}"  )
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${PARAMS}"  )

  SET(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS_DEBUG} ${PARAMS}"  )
  SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${PARAMS}"  )
ENDIF(DEBUGGING_ON AND GCC)

# Build and continue
IF(MSVC)
  SET(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   /MDd /ZI"  )
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD"  )
ENDIF(MSVC)


#INCLUDE(packit)


add_subdirectory(util ${CMAKE_CURRENT_BINARY_DIR})
add_subdirectory(src)
add_subdirectory(dataview)
#ADD_SUBDIRECTORY(examples)
