## -*- Makefile -*-
##
##

SUBDIRS=	util src dataview
EXTRA_DIST=	manual.odt README \
	CODING_STYLE \
	www/images/leaf50-back.jpg \
	www/images/index_r6_c4.gif \
	www/images/index_r6_c2.gif \
	www/images/index_r4_c4.gif \
	www/images/index_r4_c2.gif \
	www/images/spacer.gif \
	www/images/dreamweaver-template-9.gif \
	www/images/spacer-green.gif \
	www/images/leaf50-backlong.gif \
	www/index.html \
	examples/extension/graph.h \
	examples/extension/README \
	examples/extension/color.c \
	examples/extension/Graph.dd \
	examples/extension/graph.c \
	examples/extension/Color.dd \
	examples/extension/commands.txt \
	examples/extension/configure \
	examples/array/README \
	examples/array/Array.dd \
	examples/array/nodes.txt \
	examples/array/httypedef.h \
	examples/array/array.c \
	examples/array/configure \
	examples/heap/states.txt \
	examples/heap/README \
	examples/heap/one.txt \
	examples/heap/zero.txt \
	examples/heap/Heap.dd \
	examples/heap/prdatabase.h \
	examples/heap/prdatabase.c \
	examples/heap/heap.c \
	examples/heap/configure \
	examples/attributes/README \
	examples/attributes/Attrtest.dd \
	examples/attributes/attrtest.c \
	examples/attributes/configure \
	examples/graph/README \
	examples/graph/graph_database \
	examples/graph/Graph.dd \
	examples/graph/graph.c \
	examples/graph/configure \
	examples/sparse/README \
	examples/sparse/Sparse.dd \
	examples/sparse/sparse.c \
	examples/sparse/nodes.txt \
	examples/sparse/htdatabase.h \
	examples/sparse/htdatabase.c \
	examples/sparse/configure \
	examples/sym/sym.c \
	examples/hash/README \
	examples/hash/Hash.dd \
	examples/hash/nodes.txt \
	examples/hash/hash.c \
	examples/hash/configure

deb:
	fakeroot debian/rules binary


